--- a/prop-e/pom.xml
+++ b/prop-e/pom.xml
@@ -57,6 +57,11 @@
     	<version>1.9.5</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-databind</artifactId>
+    	<version>2.4.3</version>
+    </dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
