--- a/prop-e/pom.xml
+++ b/prop-e/pom.xml
@@ -61,6 +61,12 @@
     	<artifactId>jackson-databind</artifactId>
     	<version>2.4.3</version>
     </dependency>
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path-assert</artifactId>
+      <version>1.1.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
