prop-e: configurent parent POM information

--- a/prop-e/pom.xml
+++ b/prop-e/pom.xml
@@ -1,10 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>prop</groupId>
+  <parent>
+    <groupId>prop</groupId>
+    <artifactId>prop-engine</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
   <artifactId>prop-e</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>prop-e Framework</name>
