jRack submodule added

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
   <modules>
     <module>prop-e-core</module>
     <module>prop-e</module>
+    <!--  - ->
+    <module>prop-e-jrack</module>
+    <!- -  -->
   </modules>
 
 </project>
