--- a/prop-e-jrack/pom.xml
+++ b/prop-e-jrack/pom.xml
@@ -6,15 +6,11 @@
     <artifactId>prop-engine</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>prop-e-core</artifactId>
+  <artifactId>prop-e-jrack</artifactId>
   <packaging>jar</packaging>
 
-  <name>prop-e-core</name>
+  <name>prop-e-jrack</name>
   <url>http://maven.apache.org</url>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 
   <build>
     <plugins>
@@ -31,15 +27,26 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <groupId>jrack</groupId>
+      <artifactId>jrack-test</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>com.fasterxml.jackson.core</groupId>
-    	<artifactId>jackson-databind</artifactId>
-    	<version>2.3.2</version>
+    	<groupId>jrack</groupId>
+    	<artifactId>jrack-jersey-spring</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>servlet-api</artifactId>
+    	<version>2.5</version>
+    	<scope>provided</scope>
+    </dependency>
+    <dependency>
+    	<groupId>prop</groupId>
+    	<artifactId>prop-e</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
