--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,20 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version>
+      </plugin>
     </plugins>
   </build>
+
+  <distributionManagement>
+    <repository>
+      <id>${dm.repo.id}</id>
+      <name>${dm.repo.name}</name>
+      <url>${dm.repo.url}</url>
+    </repository>
+  </distributionManagement>
+
 </project>
